byok/kbserver/deployment/01_kbserver-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kbserver
  namespace: kbserver
spec:
  selector:
    app: kbserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kbserver
  namespace: kbserver
  labels:
    app: kbserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kbserver
  template:
    metadata:
      labels:
        app: kbserver
        deployment: kbserver
    spec:
      containers:
        - name: kbserver
          image: >-
            registry.example.com/kbserver/kbserver:latest
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
